--- a/0x03-React_component/task_0/dashboard/src/App/App.css
+++ b/0x03-React_component/task_0/dashboard/src/App/App.css
@@ -1,8 +1,11 @@
-:root {
-  --primary-color: #ffffff;
-  --secondary-color: #e41d3e;
-  --text-color: #121212;
-  font-family: 'Times New Roman', Times, serif;
-  font-weight: 600;
-  background-color: var(--primary-color);
+.App {
+	height: 100vh;
+	max-width: 100vw;
+}
+
+.heading-section {
+	border-bottom: 4px solid red;
+	display: flex;
+	justify-content: space-between;
+	flex-direction: row-reverse;
 }
