--- a/0x03-React_component/task_0/dashboard/src/Footer/Footer.css
+++ b/0x03-React_component/task_0/dashboard/src/Footer/Footer.css
@@ -1,9 +1,7 @@
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    border-top: 3px solid var(--secondary-color);
-    font-style: italic;
-  }
+.App-footer {
+	border-top: 4px solid red;
+	font-size: 1.4rem;
+	padding: 0.5em;
+	text-align: center;
+	font-style: italic;
+}
