--- a/0x03-React_component/task_0/dashboard/src/Login/Login.css
+++ b/0x03-React_component/task_0/dashboard/src/Login/Login.css
@@ -1,19 +1,16 @@
-.login {
-    color: var(--text-color);
-    padding: 1rem;
-    margin-top: 14rem;
-  }
-  
-  .login input {
-    margin: 1rem;
-  }
-  
-  .login button {
-    border: 1px solid gray;
-    background-color: var(--primary-color);
-    padding: 2px 6px 2px 6px;
-  }
-  
-  .login label:hover {
-    color: var(--secondary-color);
-  }
+.App-body {
+	font-size: 1.4rem;
+	padding: 1.2em;
+	height: 45%;
+}
+
+.form-inputs {
+	display: flex;
+	gap: 2em;
+	align-items: center;
+}
+
+.form-inputs .input input {
+	height: 1.4rem;
+	margin-left: 10px;
+}
