--- a/0x03-React_component/task_0/dashboard/src/Notifications/Notifications.css
+++ b/0x03-React_component/task_0/dashboard/src/Notifications/Notifications.css
@@ -1,20 +1,27 @@
 .Notifications {
-    background-color: white;
-    border: 2px dashed #e41d3e;
-    padding: 1rem;
-    color: #121212;
-    float: right;
+	padding: 2em;
+	border: 2px dashed red;
 }
 
-[data-notification-type='default'] {
-    color: blue;
+button[aria-label='Close'] {
+	border: none;
+	background: none;
 }
 
-[data-notification-type='urgent'] {
-    color: red;
+.notification-header {
+	display: flex;
+	justify-content: space-between;
 }
 
 .menuItem {
-    text-align: right;
-    margin-right: 1rem;
+	text-align: right;
+}
+
+[data-notification-type='default'] {
+	color: blue;
+}
+
+[data-urgent],
+[data-notification-type='urgent'] {
+	color: red;
 }
