Convert the App function into a React Class + fixs

--- a/0x03-React_component/task_0/dashboard/src/App/App.css
+++ b/0x03-React_component/task_0/dashboard/src/App/App.css
@@ -4,7 +4,8 @@
 }
 
 .heading-section {
-	border-bottom: 4px solid red;
+	border-bottom: 3px solid #e41d3e;
+	;
 	display: flex;
 	justify-content: space-between;
 	flex-direction: row-reverse;
