--- a/0x03-React_component/task_0/dashboard/src/Footer/Footer.css
+++ b/0x03-React_component/task_0/dashboard/src/Footer/Footer.css
@@ -1,7 +1,9 @@
 .App-footer {
-	border-top: 4px solid red;
-	font-size: 1.4rem;
-	padding: 0.5em;
+	border-top: 3px solid #e41d3e;
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
 	text-align: center;
 	font-style: italic;
 }
