--- a/0x03-React_component/task_0/dashboard/src/CourseList/CourseList.css
+++ b/0x03-React_component/task_0/dashboard/src/CourseList/CourseList.css
@@ -1,25 +1,24 @@
 #CourseList {
-	margin: auto;
-	margin-top: 3rem;
-	width: 90%;
-	padding: 0.2;
-	border: 2px solid #e0e0e0;
+    margin: auto;
+    margin-top: 15rem;
+    width:90%;
+    padding: 0.2;
+    border:2px solid #e0e0e0;
 }
 
 #CourseList th[colspan='2'] {
-	text-align: center;
-	border-bottom: 2px solid #e0e0e0;
-	font-size: 1.2rem;
+    text-align: center;
+    border-bottom: 2px solid #e0e0e0;
+    font-size: 1.2rem;
 }
 
 #CourseList th {
-	text-align: left;
-	border-bottom: 2px solid #e0e0e0;
-	font-size: 1.2rem;
+    text-align: left;
+    border-bottom: 2px solid #e0e0e0;
+    font-size: 1.2rem;
 }
 
-th,
-td {
-	padding: 0.5rem;
-	text-align: left;
-}
+th, td {
+    padding: 0.5rem;
+    text-align: left;
+  }
