--- a/0x03-React_component/task_0/dashboard/src/Footer/Footer.css
+++ b/0x03-React_component/task_0/dashboard/src/Footer/Footer.css
@@ -1,9 +1,9 @@
-.App-footer {
-	border-top: 3px solid #e41d3e;
-	position: fixed;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	text-align: center;
-	font-style: italic;
-}
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    border-top: 3px solid var(--secondary-color);
+    font-style: italic;
+  }
