--- a/0x03-React_component/task_0/dashboard/src/Notifications/Notifications.css
+++ b/0x03-React_component/task_0/dashboard/src/Notifications/Notifications.css
@@ -1,27 +1,24 @@
 .Notifications {
-	padding: 2em;
-	border: 2px dashed red;
-}
-
-button[aria-label='Close'] {
-	border: none;
-	background: none;
-}
-
-.notification-header {
-	display: flex;
-	justify-content: space-between;
-}
-
-.menuItem {
-	text-align: right;
+    background-color: white;
+    border: 2px dashed #e41d3e;
+    padding: 1rem;
+    color: #121212;
+    float: right;
 }
 
 [data-notification-type='default'] {
-	color: blue;
+    color: blue;
 }
 
-[data-urgent],
 [data-notification-type='urgent'] {
-	color: red;
+    color: red;
+}
+
+.menuItem {
+    text-align: right;
+    margin-right: 1rem;
+}
+
+.Notifications button {
+    z-index: 9999;
 }
